--- a/src/css/bgbili.css
+++ b/src/css/bgbili.css
@@ -3,7 +3,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	position: absolute;
+	position: fixed;
 	overflow: hidden;
 	z-index: 1;
 }
@@ -15,6 +15,6 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	position: absolute;
+	position: fixed;
 	z-index: 2;
 }
