--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,15 +1,15 @@
 #wrap {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	position: relative;
-	z-index: 100;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  position: relative;
+  z-index: 100;
 }
 #wrap .card {
-	background-color: rgba(0, 0, 0, 0.5);
-	color: #fff;
-	margin-top: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  margin-top: 20px;
 }
 #wrap .card .card-title {
-	padding: 0 1.25rem;
-	margin-top: .75rem;
+  padding: 0 1.25rem;
+  margin-top: 0.75rem;
 }
